kubernetes/assessment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment-service
  namespace: production
  labels:
    app: assessment-service
    environment: production
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: assessment-service
  template:
    metadata:
      labels:
        app: assessment-service
        role: backend
    spec:
      serviceAccountName: assessment-service-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: assessment-service
          image: 533016149519.dkr.ecr.us-east-1.amazonaws.com/calmroot/assessment-service:v1.0.0
          ports:
            - containerPort: 3002
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 150m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
